# team-placement-backend

./: main.py  pyproject.toml
sample_data/: Responses - Altered.xlsx  Responses Raw.xlsx  Test.xlsx  nicknames.json
team_placement/: api.py  cohort.py  constants.py  filesystem.py  objects.py  person.py  read_excel.py  schemas.py
team_placement/algorithm/: apply_controls.py  assign_leaders.py  complete_teams.py  define_targets.py  first_pass.py  fourth_pass.py  helpers.py  objects.py  prepare_people_for_teams.py  prioritized_cohorts.py  prioritized_friend.py  read_excel_old.py  receive_file.py  run_teams.py  second_pass.py  sift_cohorts.py  third_pass.py
team_placement/utils/: export_to_excel.py  find_preferred_people.py  helpers.py  read_excel.py  read_json.py  team_metrics.py
tests/: test_collect_objects.py  test_export_to_excel.py  test_filesystem.py  test_run_teams.py  test_save_objects.py
tests/algorithm/: test_apply_controls.py  test_assign_leaders.py  test_define_targets.py  test_first_pass.py  test_prepare_people_for_teams.py  test_run_teams.py  test_second_pass.py  test_sift_cohorts.py
